--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 
 .green-rectangle {
   height: 45%;
-  background-color: #66d99e;
+  background-color: #5cd496;
   width: 15%;
   position: absolute;
   top: 25%;
